# 2025_LR_OOP_7

./: .gitignore  CMakeLists.txt  README.md
include/: battle.h  constants.h  factory.h  game.h  npc.h  npc_types.h  observer.h  visitor.h
src/: battle.cpp  factory.cpp  game.cpp  main.cpp  npc_types.cpp  observer.cpp  visitor.cpp
test/: test_battle.cpp  test_factory.cpp  test_game.cpp  test_npc.cpp
